--- a/android-developer.html
+++ b/android-developer.html
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://cobibike.recruitee.com/o/freelance-android-developer-fmx'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/freelance-android-developer-fmx'>
       Freelance Android Developer (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -132,7 +132,7 @@ web?...</p>
 <p>vor 3 Tagen ... CELLULAR GmbH has a job opening for Android Developer (m/w/d) in Vienna (
 published: 20.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8'>0708 - Stong Mid Android Developer at Workforce Source</a></h5> 
+<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8'>0708 - Stong Mid Android Developer at Workforce Source</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... 0708 - Stong Mid Android Developer. ????, ??????? Full-time. Our client is a 
 European software development company providing services worldwide since?...</p>
@@ -173,7 +173,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/5eb93330-e29e-47b3-98bc-631f92bf3da0'>vpTech - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/5eb93330-e29e-47b3-98bc-631f92bf3da0'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -193,7 +193,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746920'>Job Application for Android Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746920'>Job Application for Android Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -266,7 +266,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coinsquare/dc741e0d-d11f-48a4-8935-e5164bd88895'>Coinsquare - Android Developer - Kotlin</a></h5> 
+<h5><a href='https://jobs.lever.co/coinsquare/dc741e0d-d11f-48a4-8935-e5164bd88895'>Coinsquare - Android Developer - Kotlin</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -296,7 +296,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://kapten.workable.com/j/5586C7F4D3'>Kapten - Jobs: Android Developer (M/F) #Kotlin - Paris (relocation accepted) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kapten.workable.com/j/5586C7F4D3'>Kapten - Jobs: Android Developer (M/F) #Kotlin - Paris (relocation accepted) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -369,7 +369,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fincons.applytojob.com/apply/Ow0RNJgYP0/ANDROID-SENIOR-DEVELOPER'>ANDROID SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
+<h5><a href='http://fincons.applytojob.com/apply/Ow0RNJgYP0/ANDROID-SENIOR-DEVELOPER'>ANDROID SENIOR DEVELOPER - Fincons Spa - Career Page</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -409,7 +409,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Ann Arbor, MI, USA</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-android-developer-dsgAbMNAir6Af6aICoXfFy'>Senior Android Developer #0113 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-android-developer-dsgAbMNAir6Af6aICoXfFy'>Senior Android Developer #0113 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -453,7 +453,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/XyantTechnologyInc/743999690963344-jr-android-developer'>Xyant Technology, Inc. Jr Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/XyantTechnologyInc/743999690963344-jr-android-developer'>Xyant Technology, Inc. Jr Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -465,7 +465,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Jun 21, 2019 ... Apply online for the job of Android Developer at Zealcon.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oozou.workable.com/j/F85BA86966'>Oozou - Jobs: Android Developer - Apply online</a></h5> 
+<h5><a href='https://oozou.workable.com/j/F85BA86966'>Oozou - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -486,7 +486,7 @@ class Android applications. You work hard to play hard and take pride in?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
